# filter

./: CMakeLists.txt  DirectoryTransform.cpp  DirectoryTransform.h  Image.cpp  Image.h  Image8.cpp  Image8.h  ImageI8.cpp  ImageI8.h  main.cpp  stb_image.h  stb_image_impl.cpp  stb_image_write_impl.cpp
src/: Color.cpp  Color.h  DirectoryTransform.cpp  DirectoryTransform.h  Image8.cpp  Image8.h  Log.cpp  Log.h  MPIHelper.cpp  MPIHelper.h  ParallelismPolicy.h  main.cpp
src/filters/: Fill.cpp  Fill.h  Local2DFilter.cpp  Local2DFilter.h  PointFilter.cpp  PointFilter.h
src/filters/local-2d-kernels/: BoxBlur.cpp  BoxBlur.h  BoxBlur3.cpp  BoxBlur3.h  GaussianBlur.cpp  GaussianBlur.h  UnsharpenMask3.cpp  UnsharpenMask3.h
src/filters/point-filters/: ColorOverlay.cpp  ColorOverlay.h  Fill.cpp  Fill.h  Grayscale.cpp  Grayscale.h  Saturation.cpp  Saturation.h  Sepia.cpp  Sepia.h
